keypadder (0.3.0) stable; urgency=low

  [SMerrony]
  * Feature:    Add bg config option for button background colour

-- SMerrony <merrony@gmail.com>  Fri, 24 Feb 2023 10:00:00 +0200

keypadder (0.2.0) stable; urgency=low

  [SMerrony]
  * Feature:     Add Alt+ modifier
  * Feature:     Add dropdown tab selector option (Issue #8)
  * Usability:   Minor layout improvements
  * Usability:   Remove hard-coded limits on no. of keys and tabs
  * Usability:   Remove ^ and ! shortcuts, use Shift+ and Ctrl+ instead
  * Usability:   Better error reporting for config file mistakes
  * Docs:        Expand Configuration Guide
  * Docs:        Extended example/keypad.toml to use all modifier combos


  [mgrojo]
  * Usability:   Add support for all the keys available

 -- SMerrony <merrony@gmail.com>  Fri, 17 Feb 2023 10:00:00 +0200
 